# pgwire-supabase-proxy

./: .dockerignore  .gitignore  .hadolint.yaml  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  moon.yml
.github/workflows/: ci.yaml  pr.yaml  release.yaml
.qlty/: qlty.toml
.woodpecker/: containers.yaml  pr-check.yaml  release-container.yaml
dagger/: .gitignore  dagger.json  go.mod  main.go
scripts/: run-integration-tests.sh
src/: auth.rs  error.rs  handler.rs  lib.rs  main.rs  pool.rs  proxy.rs  scram.rs  wire.rs
tanka/: jsonnetfile.json  jsonnetfile.lock.json
tanka/environments/dev/: main.jsonnet  spec.json
tanka/environments/prod/: main.jsonnet  spec.json
tanka/lib/: pgwire.libsonnet
tests/: integration.rs
