[package]
name = "pgwire-supabase-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pgwire = { version = "0.38", features = ["server-api-aws-lc-rs"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync"] }
async-trait = "0.1"
futures = "0.3"
bytes = "1"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"

[dev-dependencies]
tokio-test = "0.4"
