[package]
name = "pgwire-supabase-proxy"
version = "0.1.0"
edition = "2021"

[lib]
name = "pgwire_supabase_proxy"
path = "src/lib.rs"

[[bin]]
name = "pgwire-supabase-proxy"
path = "src/main.rs"

[dependencies]
pgwire = { version = "0.38", features = ["server-api-aws-lc-rs", "pg-type-chrono", "pg-type-serde-json", "pg-type-rust-decimal"] }
tokio-postgres = "0.7"
deadpool-postgres = "0.14"
postgres-types = { version = "0.2", features = ["with-uuid-1"] }
bytes = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "signal"] }
async-trait = "0.1"
futures = "0.3"
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.16"
chrono = "0.4"
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = "1"
serde_json = "1"

[dev-dependencies]
tokio-test = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "process", "fs"] }
